@@ -1,3 +1,9 @@
+2013-02-12  Richard Biener  <rguenther@suse.de>
+
+	PR lto/56297
+	* gcc.dg/lto/pr56297_0.c: New testcase.
+	* gcc.dg/lto/pr56297_0.c: Likewise.
+
 2013-02-12  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/46952
